# embeded_python

./: CMakeLists.txt  README.md
src/: main.cpp  main2.cpp  main_py11bind.cpp  pybind11_module.cpp
